# toys

./: .gitignore  GIT_WORKFLOW.md
anisotropy/: .gitignore  .readthedocs.yaml  1crn_sas.ply  1crn_shape.json  9yp6.ply  CONDA.md  GITHUB_SETUP.md  LICENSE  README.md  README.tex  _tmp_ff19.npz  _tmp_patch.npz  environment-docs.yml  environment-hpc.yml  environment.yml  fit_protein_mesh.py  ising_params.yaml  orientation_sample.py  parameterize_mesh.py  patch_features.npz  pyproject.toml  requirements.txt  run.bat  run.ps1  run_ising.cpu  test_patches.npz  test_propka_patches.npz  visualize_patches.py
anisotropy/anisotropy/: __init__.py  awi_field.py  cli_runtime.py  curvature.py  fast_orientation_eval.py  ff19sb.py  ising_params.py  lattice_solvent_hamiltonian.py  mesh.py  orientation_diagnostics.py  orientation_mcmc.py  orientation_multimodal.py  orientation_parallel.py  patch_visualizer.py  patches.py  pdb.py  propka_pka.py  residue_chemistry.py  sasa.py  shape.py  spectral_electrostatics.py
anisotropy/docs/: HYBRID_HAMILTONIAN_PARAMETERS.md  conf.py  getting_started.rst  index.rst  requirements.txt
anisotropy/docs/api/: modules.rst
anisotropy/docs/hamiltonian/: parameters.md
anisotropy/docs/user_guide/: orientation_sampling.rst  performance.rst  pipeline.rst  run_receipt_log.rst
anisotropy/hpc/: DEPLOY.md  README.md  ising_params.hpc.yaml  slurm_orientation.sbatch  slurm_orientation_array.sbatch  slurm_parameterize.sbatch
anisotropy/tests/: test_beta_auto.py  test_curvature.py  test_ff19sb.py  test_ising_params.py  test_patches_param.py  test_sasa_mesh.py
(+20 files in other folders)
